<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="loremipsum">lorem ipsum</string>
    <string name="app_name">Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensors">Sensors</string>
    <string name="title_activity_sensor">Sensor</string>
    <string name="title_activity_aaaah">Aaaah</string>
    <string name="data_view">data\nview</string>
    <string name="data_view_split">split</string>
    <string name="data_view_merged">merged</string>
    <string name="data_view_average">average</string>
    <string name="sensor_delay">sensor\ndelay</string>
    <string name="sensor_delay_normal">normal</string>
    <string name="sensor_delay_ui">ui</string>
    <string name="sensor_delay_game">game</string>
    <string name="sensor_delay_fastest">fastest</string>
    <string name="max_markers">max markers</string>
    <string name="x_factor">x factor</string>
    <string name="y_factor">y factor</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="title_activity_trigger">Trigger</string>
    <string name="help">\?</string>
    <string name="line_width">line width</string>
    <string name="point_size">point size</string>
    <string name="marker_type_line">lines</string>
    <string name="marker_type_point">points</string>
    <string name="marker_type_line_point">points &amp; lines</string>
    <string name="background_color">graphe color</string>
    <string name="draw_axis">axis</string>
    <string name="draw_seconds">seconds</string>
    <string name="no_axis">no axis</string>
    <string name="title_activity_step">StepActivity</string>

</resources>
